--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -27,14 +27,16 @@ $darkgrey: #444;
     width: 100%;
     height: 100vh;
     min-height: 650px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    box-sizing: border-box;
     .contact_wrap {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: calc(100% - 40px);
-        min-height: 650px;
-        padding-bottom: 100px;
+        padding-bottom: 50px;
         box-sizing: border-box;
         h1 {
             text-align: center;
