--- a/src/styles/myProjects.scss
+++ b/src/styles/myProjects.scss
@@ -56,7 +56,6 @@ $ts: '../../public/img/icons/icon_typescript.png';
         h1 {
             margin: 0 0 10px;
         }
-
         .Project {
             width: 100%;
             padding: 10px 40px;
@@ -71,7 +70,9 @@ $ts: '../../public/img/icons/icon_typescript.png';
 
                 .photo {
                     width: 100%;
-
+                    height: auto;
+                    overflow: hidden;
+                    border-radius: 15px;
                     img {
                         width: 100%;
                         height: auto;
@@ -242,8 +243,78 @@ $ts: '../../public/img/icons/icon_typescript.png';
             }
         }
     }
-}
+};
 
+/* 768px 시작 (태블릿) */
 @media screen and (min-width:768px) {
 
+}
+
+/* 1024px 시작 (pc) */
+@media screen and (min-width:1024px) {
+    .MyProjects {
+        .myProjects_wrap {
+            .projectBox{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                width: calc(100% - 280px);
+                margin: 0 auto;
+                .Project {
+                    width: 50%;
+                    padding: 10px;
+                    box-sizing: border-box;
+                    .project_wrap {
+                        height: 100%;
+                        .photo {
+                            height: 200px;
+                            overflow: hidden;
+                            margin-bottom: 10px;
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: contain;
+                            }
+                        }
+                        .titleBox {
+                            .title {
+                                h3 {
+                                }
+                            }
+                            .linkBox {
+                                a {
+                                }
+                                .portfolioLink {
+                                    a {
+                                        span {
+                                        }
+                                    }
+                                }
+        
+                                .portfolioGit {
+                                    a {
+                                        img {
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .content {
+                        }
+                        .skills_Icon {
+                        }
+                    }
+                }
+        
+                .Project.pj1 {
+                    .project_wrap {
+                        .photo {
+                            img {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
