--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,7 +57,7 @@ h1{
         text-shadow: 4px 4px 0 $purple;
     }
     .scrollDown{
-        span{
+        .material-symbols-outlined{
             font-size: 40px;
         }
     } 
@@ -71,8 +71,8 @@ h1{
         text-shadow: 4px 4px 0 $purple;
     }
     .scrollDown{
-        span{
-            font-size: 40px;
+        .material-symbols-outlined{
+            font-size: 45px;
         }
     } 
 }
