--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -98,6 +98,7 @@ $darkgrey: #444;
     }
 }
 
+
 /* 600px 시작 (태블릿) */
 @media screen and (min-width:600px) {
     .Contact {
@@ -149,6 +150,125 @@ $darkgrey: #444;
                             color: $white;
                             font-size: 14px;
                             line-height: 1em;
+                        }
+                    }
+                }
+            }
+        }
+        .scrollDown{
+            transform: rotate(-180deg);
+        }
+    }
+}
+
+/* 768px 시작 (태블릿) */
+@media screen and (min-width:768px) {
+    .Contact {
+        .contact_wrap {
+            width: calc(100% - 100px);
+            min-height: 60vh;
+            padding-bottom: 80px;
+
+            .contactBox {
+                width: 100%;
+                max-width: 100%;
+                height: 60vh;
+                padding: 30px;
+                margin: 0 auto;
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    height: 100%;
+                    >div {
+                        margin-bottom: 15px;
+    
+                        >label {
+                            font-size: 26px;
+                        }
+    
+                        >input {
+                            padding: 15px 20px;
+                            font-size: 22px;
+                        }
+    
+                        >input::placeholder {
+                            font-size: 22px;
+                        }
+    
+                        >textarea {
+                            padding: 15px 20px;
+                            font-size: 22px;
+                            height: 250px;
+                        }
+    
+                        >textarea::placeholder {
+                            font-size: 22px;
+                        }
+                    }
+    
+                    .btnBox {
+                        .submitBtn {
+                            font-size: 22px;
+                        }
+                    }
+                }
+            }
+        }
+        .scrollDown{
+            transform: rotate(-180deg);
+        }
+    }
+}
+
+/* 1024px 시작 (태블릿) */
+@media screen and (min-width:1024px) {
+    .Contact {
+        .contact_wrap {
+            max-width: 695px;
+            padding-bottom: 80px;
+
+            .contactBox {
+                width: 100%;
+                max-width: 100%;
+                height: 60vh;
+                padding: 30px;
+                margin: 0 auto;
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    height: 100%;
+                    >div {
+                        margin-bottom: 15px;
+    
+                        >label {
+                            font-size: 26px;
+                        }
+    
+                        >input {
+                            padding: 15px 20px;
+                            font-size: 22px;
+                        }
+    
+                        >input::placeholder {
+                            font-size: 22px;
+                        }
+    
+                        >textarea {
+                            padding: 15px 20px;
+                            font-size: 22px;
+                            height: 250px;
+                        }
+    
+                        >textarea::placeholder {
+                            font-size: 22px;
+                        }
+                    }
+    
+                    .btnBox {
+                        .submitBtn {
+                            font-size: 22px;
                         }
                     }
                 }
