--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -171,8 +171,7 @@ $darkgrey: #444;
 
             .contactBox {
                 width: 100%;
-                max-width: 100%;
-                height: 60vh;
+                max-width: 700px;
                 padding: 30px;
                 margin: 0 auto;
                 form {
@@ -231,7 +230,6 @@ $darkgrey: #444;
             .contactBox {
                 width: 100%;
                 max-width: 100%;
-                height: 60vh;
                 padding: 30px;
                 margin: 0 auto;
                 form {
