--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,18 +1,96 @@
 @charset "utf-8";
+$star: '../../public/img/icons/icon_star.png';
 
-.Header{
-    position: sticky;
-    top: 0;
-    right: 0;
-    background-color: #999;
-    z-index: 100;
-    ul{
-        padding: 20px;
-        li{
-            a{
-                font-size: 20px;
-                margin-left: 20px;
+@mixin center (){
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.Header {
+    display: none;
+}
+
+/* 1024px 시작 (pc) */
+@media screen and (min-width:1024px) {
+    .Header {
+        display: block;
+        position: fixed;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        z-index: 100;
+
+        ul {
+            padding: 20px;
+
+            li {
+                position: relative;
+                width: 110px;
+                height: 50px;
+                margin: 30px 0;
+                a {
+                    @include center();
+                    width: 100%;
+                    p{  
+                        @include center();
+                    }
+                    .txt{
+                        display: none;
+                    }
+                    .dot{
+                        width: 20px;
+                        height: 20px;
+                        background-color: $white;
+                        border-radius: 50%;
+                        text-indent: -99999px;
+                    }
+                }
+                .active{
+                    ::after{
+                        content: '';
+                        display: block;
+                        @include center();
+                        width: 30px;
+                        height: 35px;
+                        background-image: url($star);
+                        background-repeat: no-repeat;
+                        background-size: 40px 40px;
+                        background-position: center;
+                    }
+                    .dot{
+                        background-color: transparent;
+                    }
+                }
             }
+
+            li:hover {
+                a{
+                    .txt {
+                        display: block;
+                        width: 100%;
+                        text-align: center;
+                        font-size: 20px;
+                        line-height: 1.2em;
+                    }
+                    .dot{
+                        display: none;
+                    }
+                }
+                .active{
+                    .txt{
+                        color: transparent;
+                    }
+                }
+            }   
         }
+    }
+}
+
+/* 1240px 시작 (pc) */
+@media screen and (min-width:1240px) {
+    .Header {
+        right: 5vw;
     }
 }
