일부 문구 수정

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -30,6 +30,7 @@ $darkgrey: #444;
     padding-top: 20px;
     padding-bottom: 50px;
     box-sizing: border-box;
+    z-index: 10;
     .contact_wrap {
         position: absolute;
         top: 50%;
