--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@ $white : #f8f8f8;
     height: 100vh;
     min-height: 650px;
     margin: 0 auto 40px;
+    z-index: 10;
     .main_wrap{
         position: absolute;
         top: 50%;
