--- a/src/styles/mySkills.scss
+++ b/src/styles/mySkills.scss
@@ -17,6 +17,7 @@ $white : #f8f8f8;
     height: 100vh;
     min-height: 650px;
     margin-bottom: 40px;
+    z-index: 10;
     .mySkills_wrap {
         position: absolute;
         top: 50%;
