--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -68,6 +68,22 @@ h1{
    
 }
 
+.App{
+    position: relative;
+    background-color: #222;
+    .bgImage{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-image: url(../../public/img/sky.jpg);
+        background-size: cover;
+        background-position: center;
+        opacity: 0.5;
+        text-indent: -999999px;
+    }
+}
+
 /* 600px 시작 (태블릿) */
 @media screen and (min-width:600px){
     h1{
